--- a/profiles/Convicted.html
+++ b/profiles/Convicted.html
@@ -6,11 +6,11 @@
 	<link href="assets/media/logo.png" rel="icon" type="image/x-icon" />
 	<link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta content="killa.lol" property="og:title" />
+	<meta content="Killa.lol (@Convicted)" property="og:title" />
 	<meta content="website" property="og:type" />
 	<meta content="https://killa.lol" property="og:url" />
 	<meta content="assets/media/logo.png" property="og:image" />
-	<meta content="The truth" property="og:description" />
+	<meta content="Convicted#0001" property="og:description" />
   <link rel="canonical" href="https://killa.lol" />
 	<meta content="#808080" name="theme-color">
 	<link rel="stylesheet" href="css/style.css" />
@@ -308,10 +308,18 @@
 								  </center></div>
 	<center><p class="quote" style="color: #ffffff">
         <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa.lol/members/brad">Convicted#00024</span></a>
-        <div style="text-align: center;">
-            <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/4S7v15nWylj13IzFarXaAI?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-	</p></center>
+    </div>
+    <div class="button paperclip" onclick="window.open('https://killa.lol', '_blank');">
+    <div class="icon">
+    <i class="fa fa-paperclip" aria-hidden="true"></i>
+    </div>
+    <span>Killa.lol</span>
+    </div>
+    </div></center><br><br>
+    <div style="text-align: center;">
+    <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/4S7v15nWylj13IzFarXaAI?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    </div>
+    </p></center>
    	<!-- FOLLOWING -->
 <!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
 <br><br>
