--- a/members/salmon.html
+++ b/members/salmon.html
@@ -45,7 +45,7 @@
       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠑⠖⠒⠚⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(152 0% 47%); text-align: center;"><a2> ⛧ ⛧ ⛧  Killa Salmon  ⛧ ⛧ ⛧</span></a2>
  <a>---</a>
-  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(152 0% 47%); text-align: center;"><a href="´/members/circus/Clowns.html">⛧  Salmon's Circus  ⛧</span></a>
+  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(152 0% 47%); text-align: center;"><a href="´circus/Clowns.html">⛧  Salmon's Circus  ⛧</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(152 0% 47%); text-align: center;"><a href="https://t.me/SalmonB0T">⛧  Telegram  ⛧</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(152 0% 47%); text-align: center;"><a href="http://discordapp.com/users/472260067417128970">⛧  Discord  ⛧</span></a>
  <span style="font-weight: bold;text-shadow: 0 0 5px hwb(152 0% 47%); text-align: center;"><a href="https://www.roblox.com/users/2438718859/profile">⛧  Roblox  ⛧</span></a>
