--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -425,7 +425,7 @@
         };
         })();
         </script>
-<audio id="audio" src="scars.mp3"></audio>
+<audio id="audio" src="https://cdn.discordapp.com/attachments/1007781572394631199/1061027513725374524/scars.mp3"></audio>
 <script src="js/audio.js"></script><div class="dot"></div>
 <script src="js/disable_inspect.js"></script>
 </div>
