--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -301,11 +301,13 @@
 									<span class="badge-tooltiptext">Beta</span>
 								  </div>
 								  </center></div>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa-brad.doxedme.lol/5RYDn5nl7">Discord</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://twitter.com/killhousee">Twitter</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.youtube.com/channel/UCEbXZB1UMJo8upYTklxi6AQ">Youtube</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://t.me/kkillhouse">Telegram</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.tiktok.com/@kkillhousee">TikTok</span></a>
+    <body onload="document.body.style.opacity='1'">
+        <div class="center">
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa-brad.doxedme.lol/5RYDn5nl7">Discord</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://twitter.com/killhousee">Twitter</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.youtube.com/channel/UCEbXZB1UMJo8upYTklxi6AQ">Youtube</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://t.me/kkillhouse">Telegram</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.tiktok.com/@kkillhousee">TikTok</span></a>
 	</p></center>
   <br>
 	<!-- FOLLOWING -->
