--- a/profiles/k.html
+++ b/profiles/k.html
@@ -313,7 +313,7 @@
         <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.roblox.com/users/148570478/profile">Roblox </span></a>
         <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="killa.lol/profiles/k">Killa</span></a>
     </div>
-    
+
     <div class="button paperclip" onclick="window.open('https://killa.lol', '_blank');">
     <div class="icon">
     <i class="fa fa-paperclip" aria-hidden="true"></i>
@@ -525,7 +525,7 @@
     });
     document.getElementById('site').hidden=true
     function playAudio() {
-        myAudio = new Audio('scars.mp3'); 
+        myAudio = new Audio('krhis.mp3'); 
         if (typeof myAudio.loop == 'boolean')
         {
             myAudio.loop = true;
