--- a/profiles/k.html
+++ b/profiles/k.html
@@ -494,7 +494,7 @@
       <button id="button" style="color:hwb(0 100% 0%); font-family:'Courier New', Courier, monospace; border: none; margin: 0; background-color: #000000; position: absolute; top: 50%;left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); width: 100%; height: 100%;" onclick="playAudio();document.getElementById('button').hidden=true;document.getElementById('site').hidden=false">   
   <div class="center">
   <pre>
-                                    KILLHOUSE                                  
+                                    KHRIS                                  
 </button>
 </pre>
     </div>
