--- a/profiles/k.html
+++ b/profiles/k.html
@@ -316,7 +316,7 @@
     <div class="icon">
     <i class="fa fa-paperclip" aria-hidden="true"></i>
     </div>
-    <span>Killa.lol</span>
+    <span> </span>
     </div>
     </div></center><br><br>
     <div style="text-align: center;">
