--- a/profiles/Convicted.html
+++ b/profiles/Convicted.html
@@ -1,56 +1,61 @@
 
 <!DOCTYPE html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<link href="assets/media/logo.png" rel="icon" type="image/x-icon" />
-	<link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
-	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-	<meta content="Killa.lol (@Convicted)" property="og:title" />
-	<meta content="website" property="og:type" />
-	<meta content="https://killa.lol" property="og:url" />
-	<meta content="assets/media/logo.png" property="og:image" />
-	<meta content="Convicted#0001" property="og:description" />
-  <link rel="canonical" href="https://killa.lol" />
-	<meta content="#808080" name="theme-color">
-	<link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/up.css" />
-  <link rel="stylesheet" href="css/chop.css" />
-  <link href="css/aaaa.css" rel="stylesheet"> 
-  <link rel="icon" href="assets/media/logo.png" type="image/png" sizes="16x16 32x32 64x64">
-  <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
-    <meta property="twitter:url" content="killa.lol">
-    <meta property="twitter:title" content="Killa.lol (@Convicted)">
-    <meta property="twitter:description" content="Convicted#0024">
-    <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
-    <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
-    <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
-    <style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Convicted</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
+<link href="assets/media/logo.png" rel="icon" type="image/x-icon" />
+<link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta content="wsg.lol (@*)" property="og:title" />
+<meta content="website" property="og:type" />
+<meta content="https://wsg.lol/*" property="og:url" />
+<meta content="https://cdn.discordapp.com/attachments/853029497266503710/1049595708686204958/ee.png" property="og:image" />
+<meta content="Owner @ Wsg.lol" property="og:description" />
+<link rel="canonical" href="https://wsg.lol/*" />
+<meta content="#808080" name="theme-color">
+<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/up.css" />
+<link rel="stylesheet" href="css/chop.css" />
+<link href="css/aaaa.css" rel="stylesheet">
+<link rel="icon" href="assets/media/ee.png" type="image/png" sizes="16x16 32x32 64x64">
+<script disable-devtool-auto src='js/disable-devtool.min.js'></script>
+<meta property="twitter:url" content="wsg.lol/*">
+<meta property="twitter:title" content="wsg.lol (@*)">
+<meta property="twitter:description" content="Owner @ Wsg.lol">
+<link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
+<style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
+<link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
+<style>@import url('https://fonts.cdnfonts.com/css/pf-tempesta-five');</style>
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>*</title>
 </head>
-<!-- Copy the <script> tag into your own page(s) for the snow effect. That is all! (No CSS etc. is needed) -->
+
 <script src="js/snowstorm.js"></script>
-<!-- for the Snowstorm homepage, allow the demo to run on iPhone and mobile devices. -->
+
 <script>snowStorm.excludeMobile = false;</script>
-
 <body>
-      <div class="brokie">
-      <script src="js/spooky.js"></script>
-      <script src="js/spooky.js"></script>
-              <div class="top-wrap">
-        </div>
-  <div class="container" style="display: block;">
-    <div class="row" style="display: block;">
-        <div class="col-md-12" style="display: block;">
-        </div> 
-
+<div class="brokie">
+<script src="js/spooky.js"></script>
+<script src="js/spooky.js"></script>
+<div class="top-wrap">
+</div>
+<div class="container" style="display: block;">
+<div class="row" style="display: block;">
+<div class="col-md-12" style="display: block;">
+</div>
 <div id="enter"><b class="begin"><pre class="text"></pre>
 <pre class="wsg">                                            
+      /\\     
+ /\\  /\\  /\\
+   /\ /\ /\\  
+/\\\\ /\\\\\\\
+   /\ /\ /\\  
+ /\\  /\\  /\\
+      /\\     
 </pre></b></div>
 <div id="main">
-  <style>
+<style>
         @import url('//fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
         html {
             -ms-overflow-style: none; /* for Internet Explorer, Edge */
@@ -61,7 +66,6 @@
             display: none; /* for Chrome, Safari, and Opera */
         }
     </style>
-    
 <style>
 	@import url('//fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 	* {
@@ -76,7 +80,7 @@
 		height: 100%;
 		width: 100%;
 		place-items: center;
-		background: linear-gradient(315deg, #000000 0%, #161616 74%);
+		background: linear-gradient(315deg, #000 0%, #000 74%);
 	}
 	.title {
 		text-align: center;
@@ -85,12 +89,12 @@
 		margin-top: 7px;
 	}
 	.avatar {
-		border: 0px solid #fff;
+		border: 0px solid #808080;
 		height: 200px;
 		width: 200px;
 		object-fit: cover;
 		border-radius: 50%;
-		position: relative;
+		position: center;
 		left: 10px;
 	}
 	.wrapper .button {
@@ -100,12 +104,12 @@
 		float: middle;
 		margin: 0 5px;
 		overflow: hidden;
-		background: #fff;
+		background: transparent;
 		border-radius: 10px;
 		cursor: pointer;
-		box-shadow: 0px 3px 3px rgba(255, 255, 255, 255);
+		box-shadow: 0px 0px 0px rgba(255, 255, 255, 255);
 		transition: all 0.3s ease-out;
-		color: black;
+		color: white;
 	}
 	.wrapper .button:hover {
 		width: 200px;
@@ -159,10 +163,10 @@
 		color: #333;
 	}
 	.wrapper .button.tiktok:hover .icon {
-		background: #000000;
+		background: #5A5A5A;
 	}
 	.wrapper .button.tiktok span {
-		color: #000000;
+		color: #5A5A5A;
 	}
 	.wrapper .button.youtube:hover .icon {
 		background: #c4302b;
@@ -219,10 +223,10 @@
 		color: #FF5700;
 	}
 	.wrapper .button.paperclip:hover .icon {
-		background: #000000;
+		background: #5A5A5A;
 	}
 	.wrapper .button.paperclip span {
-		color: #000000;
+		color: #5A5A5A;
 	}
 	.wrapper .button.soundcloud:hover .icon {
 		background: #ff5500;
@@ -287,49 +291,120 @@
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1051942010963099788/1058825771558379540/Convictedbanner.png'); background-size: cover;">
-      <script src="js/spooky.js"></script>
+<body style="background-image: url(''); background-size: cover;">
+<script src="js/spooky.js"></script>
 <div class="title">
-	<div class="title-img">
-		<img alt="Avatar" class="avatar" src="https://media.discordapp.net/attachments/966425122456104970/1059218699858481163/2f9023a717a57927081f8664f72eb81f.jpg?width=768&height=433">
-	</div>
-<center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('attachments/987149728800198686/991834200309248070/sparkle.gif');">Convicted</h1>
-								  <div class="badge">
-									<img src="https://cdn.discordapp.com/attachments/1060662763053129838/1060741623568404520/976572824611336234.gif" style="width: 20px; height: 20px;" alt="Eternal">
-									<span class="badge-tooltiptext">Owner</span>
-								  </div>
-                                  <div class="badge">
-                                    <img src="https://cdn.discordapp.com/attachments/1060662763053129838/1060742004725788713/913451845920387092.webp" style="width: 20px; height: 20px;" alt="PAID">
-                                    <span class="badge-tooltiptext">Developer</span>
-                                    </div>
-								  <div class="badge">
-									<img src="main.png" style="width: 20px; height: 20px;" alt="Beta">
-									<span class="badge-tooltiptext">Beta</span>
-								  </center></div>
-	<center><p class="quote" style="color: #ffffff">
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://killa.lol/members/brad">Convicted#00024</span></a>
-    </div>
-    <div class="button paperclip" onclick="window.open('https://killa.lol', '_blank');">
-    <div class="icon">
-    <i class="fa fa-paperclip" aria-hidden="true"></i>
-    </div>
-    <span>Killa.lol</span>
-    </div>
-    </div></center><br><br>
-    <div style="text-align: center;">
-    <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/4S7v15nWylj13IzFarXaAI?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    </div>
-    </p></center>
-   	<!-- FOLLOWING -->
-<!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
-<br><br>
-            <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
-                <h4><a href=""
-                              style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
-                </h4>
-            </div>          
-          
-    <style type="text/css"/css">
+<div class="title-img">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/853029497266503710/1058996816017895464/IMG_4752.jpg">
+</div>
+<div class="text" style="display: inline-block;"><span class="sparkle">Leg</div></span><br><br>
+<div class="badge">
+<img src="assets/media/crown.png" style="width: 20px; height: 20px;" alt="Owner">
+<span class="badge-tooltiptext">Owner</span>
+</div>
+<div class="badge">
+<img src="assets/media/developer.png" style="width: 20px; height: 20px;" alt="DEVELOPER">
+<span class="badge-tooltiptext">Developer</span>
+</div>
+<div class="badge">
+<img src="assets/media/council.png" style="width: 20px; height: 20px;" alt="COUNCIL">
+<span class="badge-tooltiptext">COUNCIL</span>
+</div>
+<div class="badge">
+<img src="assets/media/verified.svg" style="width: 20px; height: 20px;" alt="WSG">
+<span class="badge-tooltiptext">WSG</span>
+</div>
+<div class="badge">
+<img src="assets/media/alpha.png" style="width: 20px; height: 20px;" alt="ALPHA">
+<span class="badge-tooltiptext">ALPHA USER</span>
+</div>
+<div class="badge">
+<img src="assets/media/verified.png" style="width: 20px; height: 20px;" alt="VERIFIED">
+<span class="badge-tooltiptext">VERIFIED</span>
+</div>
+<div class="badge">
+<img src="assets/media/PAID.gif" style="width: 20px; height: 20px;" alt="PAID">
+<span class="badge-tooltiptext">PAID</span>
+</div>
+<div class="badge">
+<img src="https://cdn.discordapp.com/attachments/1037547816576372786/1055535043084308520/gift.png" style="width: 20px; height: 20px;" alt="GIFT">
+<span class="badge-tooltiptext">GIFT</span>
+</div>
+<div class="badge">
+<img src="https://cdn.discordapp.com/attachments/1037547816576372786/1055535043294007326/hat.png" style="width: 20px; height: 20px;" alt="HAT">
+<span class="badge-tooltiptext">XMAS HAT</span>
+</div>
+<div class="badge">
+<img src="https://cdn.discordapp.com/attachments/1037547816576372786/1055535043533094972/snowflake.png" style="width: 20px; height: 20px;" alt="SNOWFLAKE">
+<span class="badge-tooltiptext">SNOWFLAKE</span>
+</div>
+<div class="badge">
+<img src="https://cdn.discordapp.com/attachments/1037547816576372786/1055535043776368670/tree1.png" style="width: 20px; height: 20px;" alt="TREE">
+<span class="badge-tooltiptext">XMAS TREE</span>
+</div>
+<p class="quote">
+I'll miss you, 2022.
+</p></center>
+
+</div>
+<center><div class="wrapper">
+<div class="button discord" onclick="window.open('https://discord.com/users/798888343580442665', '_blank');">
+<div class="icon">
+<i class="fab fa-discord"></i>
+</div>
+<span>discord</span>
+</div>
+<div class="button telegram" onclick="window.open('https://t.me/b4l10', '_blank');">
+<div class="icon">
+<i class="fab fa-telegram"></i>
+</div>
+<span>telegram</span>
+</div>
+<div class="button soundcloud" onclick="window.open('https://soundcloud.com/ssss40', '_blank');">
+<div class="icon">
+<i class="fab fa-soundcloud"></i>
+</div>
+<span>soundcloud</span>
+</div>
+<div class="button twitter" onclick="window.open('https://twitter.com/v_______x', '_blank');">
+<div class="icon">
+<i class="fab fa-twitter"></i>
+</div>
+<span>twitter</span>
+</div>
+<div class="button twitch" onclick="window.open('https://github.com/alright', '_blank');">
+<div class="icon">
+<i class="fab fa-twitch"></i>
+</div>
+<span>twitch</span>
+</div>
+<div class="button github" onclick="window.open('https://github.com/ranks', '_blank');">
+<div class="icon">
+<i class="fab fa-github"></i>
+</div>
+<span>github</span>
+</div>
+<div class="button steam" onclick="window.open('https://steamcommunity.com/profiles/76561199260597424', '_blank');">
+<div class="icon">
+<i class="fab fa-steam"></i>
+</div>
+<span>steam</span>
+</div>
+<div class="button paperclip" onclick="window.open('https://broke.ga', '_blank');">
+<div class="icon">
+<i class="fa fa-paperclip" aria-hidden="true"></i>
+</div>
+<span>broke.ga</span>
+</div>
+</div></center><br><br>
+<div style="text-align: center;">
+<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/1bUNFlRKqHBDYCi52FYDKH?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
+<div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
+<h4><a href="https://wsg.lol" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">wsg.lol</a>
+</h4>
+</div>
+<style type="text/css" css">
         /* Circle Text Styles */
         #outerCircleText {
         /* Optional - DO NOT SET FONT-SIZE HERE, SET IT IN THE SCRIPT */
@@ -345,10 +420,10 @@
         /* End Required */
         /* End Circle Text Styles */
         </style>
-        <script type="text/javascript">
+<script type="text/javascript">
         ;(function(){
         // (QUOTED STRING)
-        var msg = "Convicted";
+        var msg = "L E G";
 
         var size = 12;
         // Set both to 1 for plain circle, set one of them to 2 for oval
@@ -435,8 +510,6 @@
         };
         })();
         </script>
-<audio id="audio" src="assets/media/Convicted.mp3"></audio>
+<audio id="audio" src="https://cdn.discordapp.com/attachments/853029497266503710/1058987216233308190/SnapSave.io_-_R.Kelly_-_Half_On_A_Baby_320_kbps.mp3"></audio>
 <script src="js/audio.js"></script><div class="dot"></div>
 <script src="js/disable_inspect.js"></script>
-</div>
-<script>(function(){var js = "window['__CF$cv$params']={r:'785059ad8a8583a3',m:'S8eQwuqpETjoqI7wddmlXMApp9fGs4EOvlApF61JOc4-1672965081-0-AbeNFQsjkOgQqDRTqYxwVUhNMdaNaqmFNIrkRHh421EEfCpZh3Zms/JqZkRX8QpJnPfqSG2DU1whRmgIfVORUsp7BKSh/6ACi5nhBiZXCzg/YSAEYDBYSE1FOVqm7QpKzQ==',s:[0x7f7acff3ae,0xe026ab5892],u:'/cdn-cgi/challenge-platform/h/b'};var now=Date.now()/1000,offset=14400,ts=''+(Math.floor(now)-Math.floor(now%offset)),_cpo=document.createElement('script');_cpo.nonce='',_cpo.src='/cdn-cgi/challenge-platform/h/b/scripts/alpha/invisible.js?ts='+ts,document.getElementsByTagName('head')[0].appendChild(_cpo);";var _0xh = document.createElement('iframe');_0xh.height = 1;_0xh.width = 1;_0xh.style.position = 'absolute';_0xh.style.top = 0;_0xh.style.left = 0;_0xh.style.border = 'none';_0xh.style.visibility = 'hidden';document.body.appendChild(_0xh);function handler() {var _0xi = _0xh.contentDocument || _0xh.contentWindow.document;if (_0xi) {var _0xj = _0xi.createElement('script');_0xj.nonce = '';_0xj.innerHTML = js;_0xi.getElementsByTagName('head')[0].appendChild(_0xj);}}if (document.readyState !== 'loading') {handler();} else if (window.addEventListener) {document.addEventListener('DOMContentLoaded', handler);} else {var prev = document.onreadystatechange || function () {};document.onreadystatechange = function (e) {prev(e);if (document.readyState !== 'loading') {document.onreadystatechange = prev;handler();}};}})();</script></html>
