--- a/profiles/k.html
+++ b/profiles/k.html
@@ -305,11 +305,10 @@
 								  <div class="badge">
 									<img src="main.png" style="width: 20px; height: 20px;" alt="Beta">
 									<span class="badge-tooltiptext">Beta</span>
-    <body onload="document.body.style.opacity='1'">
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Discord.com">Khris#0001</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://t.me/Contributes">Telegram</span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.roblox.com/users/148570478/profile">Roblox </span></a>
-    <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="killa.lol/profiles/k">Killa</span></a>
+	<center><p class="quote" style="color: #ffffff">
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://discordapp.com/users/1000138397689593956@Khris#0001">Discord</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href=" https://t.me/Contributes">Telegram</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.roblox.com/users/148570478/profile">Roblox</span></a>
     </div>
     <div class="button paperclip" onclick="window.open('https://killa.lol', '_blank');">
     <div class="icon">
