--- a/profiles/k.html
+++ b/profiles/k.html
@@ -305,6 +305,7 @@
 								  <div class="badge">
 									<img src="main.png" style="width: 20px; height: 20px;" alt="Beta">
 									<span class="badge-tooltiptext">Beta</span>
+                                  </center></div>
 	<center><p class="quote" style="color: #ffffff">
         <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://discordapp.com/users/1000138397689593956@Khris#0001">Discord</span></a>
         <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href=" https://t.me/Contributes">Telegram</span></a>
