--- a/profiles/k.html
+++ b/profiles/k.html
@@ -307,9 +307,9 @@
 									<span class="badge-tooltiptext">Beta</span>
                                   </center></div>
 	<center><p class="quote" style="color: #ffffff">
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://discordapp.com/users/1000138397689593956@Khris#0001">Discord</span></a>
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href=" https://t.me/Contributes">Telegram</span></a>
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.roblox.com/users/148570478/profile">Roblox</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://discordapp.com/users/1000138397689593956@Khris#0001">Discord ~</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href=" https://t.me/Contributes"> Telegram ~</span></a>
+        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.roblox.com/users/148570478/profile"> Roblox</span></a>
     </div>
     <div class="button paperclip" onclick="window.open('https://killa.lol', '_blank');">
     <div class="icon">
