--- a/profiles/Convicted.html
+++ b/profiles/Convicted.html
@@ -362,7 +362,7 @@ I'll miss you, 2022.
 </div>
 <div class="button soundcloud" onclick="window.open('https://soundcloud.com/ssss40', '_blank');">
 <div class="icon">
-<i class="https://cdn.discordapp.com/attachments/1060925985870069791/1061061601609908405/693218877500293131.png"></i>
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055086618476554/922552650887749653.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>soundcloud</span>
 </div>
