--- a/profiles/k.html
+++ b/profiles/k.html
@@ -522,7 +522,7 @@
     });
     document.getElementById('site').hidden=true
     function playAudio() {
-        myAudio = new Audio('krhis.mp3'); 
+        myAudio = new Audio('khris.mp3'); 
         if (typeof myAudio.loop == 'boolean')
         {
             myAudio.loop = true;
