--- a/profiles/k.html
+++ b/profiles/k.html
@@ -305,23 +305,35 @@
 								  <div class="badge">
 									<img src="main.png" style="width: 20px; height: 20px;" alt="Beta">
 									<span class="badge-tooltiptext">Beta</span>
-                                  </center></div>
-	<center><p class="quote" style="color: #ffffff">
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://discordapp.com/users/1000138397689593956@Khris#0001">Discord ~</span></a>
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href=" https://t.me/Contributes"> Telegram ~</span></a>
-        <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="https://www.roblox.com/users/148570478/profile"> Roblox</span></a>
-    </div>
-    <div class="button paperclip" onclick="window.open('https://killa.lol', '_blank');">
-    <div class="icon">
-    <i class="fa fa-paperclip" aria-hidden="true"></i>
-    </div>
-    <span> </span>
-    </div>
-    </div></center><br><br>
-    <div style="text-align: center;">
-    <iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/3sJ1BJd8SjAI0gD0wrOUjU?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    </div>
-    </p></center>
+</div>
+<p class="quote">
+au revoir, reste en securite, j t'aime.
+</p></center>
+
+</div>
+<center><div class="wrapper">
+<div class="button discord" onclick="window.open('https://discordapp.com/users/1000138397689593956@Khris#0001', '_blank');">
+<div class="icon">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png" style="width: 20px; height: 20px;" alt="PAID">
+</div>
+</div>
+<span>discord</span>
+</div>
+<div class="button telegram" onclick="window.open(' https://t.me/Contributes', '_blank');">
+<div class="icon">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png" style="width: 20px; height: 20px;" alt="PAID">
+</div>
+</div>
+<span>telegram</span>
+</div>
+<div class="button roblox" onclick="window.open('https://www.roblox.com/users/148570478/profile', '_blank');">
+<div class="icon">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794735992832/2_black.png" style="width: 20px; height: 20px;" alt="PAID">
+</div>
+<span>roblox</span>
+</div>
+</div></center><br><br>
+<div style="text-align: center;">
    	<!-- FOLLOWING -->
 <!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
 <br><br>
