--- a/profiles/k.html
+++ b/profiles/k.html
@@ -305,44 +305,38 @@
 								  <div class="badge">
 									<img src="main.png" style="width: 20px; height: 20px;" alt="Beta">
 									<span class="badge-tooltiptext">Beta</span>
-</div>
 <p class="quote">
 au revoir, reste en securite, j t'aime.
 </p></center>
 
 </div>
 <center><div class="wrapper">
-<div class="button discord" onclick="window.open('https://discordapp.com/users/1000138397689593956@Khris#0001', '_blank');">
+<div class="button discord" onclick="window.open('https://discordapp.com/users/1000138397689593956', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png" style="width: 20px; height: 20px;" alt="PAID">
-</div>
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png"></i>
 </div>
 <span>discord</span>
 </div>
-<div class="button telegram" onclick="window.open(' https://t.me/Contributes', '_blank');">
+<div class="button telegram" onclick="window.open('https://t.me/Contributes', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png" style="width: 20px; height: 20px;" alt="PAID">
-</div>
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794735992832/2_black.png"></i>
 </div>
 <span>telegram</span>
 </div>
 <div class="button roblox" onclick="window.open('https://www.roblox.com/users/148570478/profile', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794735992832/2_black.png" style="width: 20px; height: 20px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794249445397/3_black.png"></i>
 </div>
 <span>roblox</span>
 </div>
 </div></center><br><br>
 <div style="text-align: center;">
-   	<!-- FOLLOWING -->
-<!-- Cloudflare Pages Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "fc9b743988b74d5b8c1ce741cbf59475"}'></script><!-- Cloudflare Pages Analytics --></div>
-<br><br>
-            <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
-                <h4><a href=""
-                              style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
-                </h4>
-            </div>          
-          
+<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/1bUNFlRKqHBDYCi52FYDKH?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+</div>
+<div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
+<h4><a href="https://wsg.lol" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">wsg.lol</a>
+</h4>
+</div>
     <style type="text/css"/css">
         /* Circle Text Styles */
         #outerCircleText {
