--- a/profiles/k.html
+++ b/profiles/k.html
@@ -313,28 +313,24 @@ au revoir, reste en securite, j t'aime.
 <center><div class="wrapper">
 <div class="button discord" onclick="window.open('https://discordapp.com/users/1000138397689593956', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png"></i>
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>discord</span>
 </div>
 <div class="button telegram" onclick="window.open('https://t.me/Contributes', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794735992832/2_black.png"></i>
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794735992832/2_black.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>telegram</span>
 </div>
 <div class="button roblox" onclick="window.open('https://www.roblox.com/users/148570478/profile', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794249445397/3_black.png"></i>
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794249445397/3_black.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>roblox</span>
 </div>
 </div></center><br><br>
-<div style="text-align: center;">
-<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/1bUNFlRKqHBDYCi52FYDKH?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
-<div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
-<h4><a href="https://wsg.lol" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">wsg.lol</a>
 </h4>
 </div>
     <style type="text/css"/css">
