--- a/profiles/k.html
+++ b/profiles/k.html
@@ -21,7 +21,7 @@
 <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
 <meta property="twitter:url" content="">
 <meta property="twitter:title" content="killa.lol - [@Khris]">
-<meta property="twitter:description" content="Owner @ Wsg.lol">
+<meta property="twitter:description" content="Khris#0001">
 <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
 <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
 <link href="https://fonts.cdnfonts.com/css/pf-tempesta-five" rel="stylesheet">
@@ -283,7 +283,7 @@
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url(''); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1060925985870069791/1061048193049174117/image.png'); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
@@ -333,10 +333,10 @@ au revoir, reste en securite, j t'aime.
 </div>
 </div></center><br><br>
 <div style="text-align: center;">
-<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/1bUNFlRKqHBDYCi52FYDKH?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/3sJ1BJd8SjAI0gD0wrOUjU?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 </div>
 <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">
-<h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;">wsg.lol</a>
+<h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #FFC0CB;"></a>
 </h4>
 </div>
 <style type="text/css" css">
