--- a/profiles/k.html
+++ b/profiles/k.html
@@ -72,7 +72,7 @@
 		height: 100%;
 		width: 100%;
 		place-items: center;
-		background: linear-gradient(315deg, #000 0%, #000 74%);
+		background: linear-gradient(315deg, rgb(255, 255, 255) 0%, rgb(235, 235, 235) 74%);
 	}
 	.title {
 		text-align: center;
@@ -143,10 +143,10 @@
 	--------------------------------------------
 	*/
 	.wrapper .button.discord:hover .icon {
-		background: #5865F2;
+		background: #161616;
 	}
 	.wrapper .button.discord span {
-		color: #5865F2;
+		color: #5f5f5f;
 	}
 	.wrapper .button.github:hover .icon {
 		background: #333;
@@ -304,7 +304,7 @@
 </div>
 </div>
 <p class="quote">
-au revoir, reste en securite, j t'aime.
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="FRENCH QUOTE FROM KHRIS">au revoir, reste en securite, j t'aime.</span></a>
 </p></center>
 
 </div>
