--- a/profiles/k.html
+++ b/profiles/k.html
@@ -289,7 +289,7 @@
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063494012780674/4b1eb1119753a6105fa4e7ac767ad6ad.jpg">
 </div>
-<div class="text" style="display: inline-block;"><span class="sparkle">Khris</div></span><br><br>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="/team/aqua">Khris</span></a>
 <div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055487346483310/1005492246159822978.gif" style="width: 20px; height: 20px;" alt="Paid">
 <span class="badge-tooltiptext">Premium</span>
