--- a/profiles/k.html
+++ b/profiles/k.html
@@ -289,7 +289,7 @@
 <div class="title-img">
 <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063494012780674/4b1eb1119753a6105fa4e7ac767ad6ad.jpg">
 </div>
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="/team/aqua">Khris</span></a>
+<div class="text" style="display: inline-block;"><span class="sparkle" >Khris</div></span><br><br>
 <div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055487346483310/1005492246159822978.gif" style="width: 20px; height: 20px;" alt="Paid">
 <span class="badge-tooltiptext">Premium</span>
@@ -311,19 +311,19 @@
 <center><div class="wrapper">
 <div class="button discord" onclick="window.open('https://discordapp.com/users/1000138397689593956', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063795306401882/1_black.png" style="width: 20px; height: 20px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061073995052630036/tele.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>discord</span>
 </div>
 <div class="button telegram" onclick="window.open('https://t.me/Contributes', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794735992832/2_black.png" style="width: 20px; height: 20px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061073547910451270/tele.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>telegram</span>
 </div>
 <div class="button roblox" onclick="window.open('https://www.roblox.com/users/148570478/profile', '_blank');">
 <div class="icon">
-<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061063794249445397/3_black.png" style="width: 20px; height: 20px;" alt="PAID">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061074169116229713/tele.png" style="width: 20px; height: 20px;" alt="PAID">
 </div>
 <span>roblox</span>
 </div>
