--- a/profiles/k.html
+++ b/profiles/k.html
@@ -221,10 +221,10 @@
 		color: #5A5A5A;
 	}
 	.wrapper .button.soundcloud:hover .icon {
-		background: #ff5500;
+		background: #2b2b2b;
 	}
 	.wrapper .button.soundcloud span {
-		color: #ff5500;
+		color: #5f5f5f;
 	}
 	.wrapper .button.pinterest:hover .icon {
 		background: #cc0000;
@@ -233,10 +233,10 @@
 		color: #cc0000;
   }
 	.wrapper .button:hover .icon {
-		background: #4078c0;
+		background: #252525;
 	}
 	.wrapper .button span {
-		color: #4078c0;
+		color: #646464;
 	}
 	.badge {
 		position: relative;
