--- a/profiles/c.html
+++ b/profiles/c.html
@@ -303,6 +303,7 @@
 <span class="badge-tooltiptext">Developer</span>
 </div>
 </div>
+</center>
 <p class="quote">
 <span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">     It all comes to an end.</span></a>
 </p></center>
