--- a/profiles/c.html
+++ b/profiles/c.html
@@ -9,10 +9,10 @@
 <meta content="killa.lol [@Convicted]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
-<meta content="https://cdn.discordapp.com/attachments/966425184594706542/1058141378611269702/IMG_4032.jpg" property="og:image" />
-<meta content="Convicted#0024" property="og:description" />
+<meta content="https://cdn.discordapp.com/attachments/1060662763053129838/1060696673954836610/5RY3ZK99E.png" property="og:image" />
+<meta content="・Convicted#0024" property="og:description" />
 <link rel="canonical" href="killa.lol" />
-<meta content="#808080" name="theme-color">
+<meta content="#FFFFFF" name="theme-color">
 <link rel="stylesheet" href="css/style.css" />
 <link rel="stylesheet" href="css/up.css" />
 <link rel="stylesheet" href="css/chop.css" />
@@ -20,7 +20,7 @@
 <link rel="icon" href="assets/media/ee.png" type="image/png" sizes="16x16 32x32 64x64">
 <script disable-devtool-auto src='js/disable-devtool.min.js'></script>
 <meta property="twitter:url" content="">
-<meta property="twitter:title" content="killa.lol - [@Convicted]">
+<meta property="twitter:title" content=".gg/Killabio ・ @Convicted">
 <meta property="twitter:description" content="Convicted#0024">
 <link href="https://fonts.cdnfonts.com/css/common-pixel" rel="stylesheet">
 <style>@import url('https://fonts.cdnfonts.com/css/common-pixel');</style>
