--- a/profiles/c.html
+++ b/profiles/c.html
@@ -295,6 +295,10 @@
 <span class="badge-tooltiptext">Owner</span>
 </div>
 <div class="badge">
+<img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055487346483310/1005492246159822978.gif" style="width: 20px; height: 20px;" alt="Paid">
+<span class="badge-tooltiptext">Premium</span>
+</div>
+<div class="badge">
 <img src="https://cdn.discordapp.com/attachments/1060925985870069791/1061055086618476554/922552650887749653.png" style="width: 20px; height: 20px;" alt="Codein">
 <span class="badge-tooltiptext">Lean</span>
 </div>
@@ -305,7 +309,7 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">     It all comes to an end.</span></a>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">           It all comes to an end.</span></a>
 </p></center>
 
 </div>
