--- a/profiles/c.html
+++ b/profiles/c.html
@@ -309,9 +309,9 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">           It all comes to an end.</span></a>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">                It all comes to an end.</span></a>
 </p></center>
-
+<pre>   <a href="https://discord.gg/killabio"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Killa </span> </a>
 </div>
 <center><div class="wrapper">
 <div class="button discord" onclick="window.open('https://discordapp.com/users/1000022273673138226', '_blank');">
