--- a/profiles/c.html
+++ b/profiles/c.html
@@ -309,7 +309,7 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">                It all comes to an end.</span></a>
+<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Convicted..">                Some of them stay some of them dont.</span></a>
 </p></center>
 <pre>   <a href="https://discord.gg/killabio"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Killa </span> </a>
 </div>
