--- a/profiles/p.html
+++ b/profiles/p.html
@@ -283,7 +283,7 @@
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1004849202507038804/1061443931629436958/banner3.png'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1004849202507038804/1061447005349625907/IMG_4134.gif'); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
