--- a/profiles/p.html
+++ b/profiles/p.html
@@ -283,7 +283,7 @@
 		cursor: pointer;
 	}
   </style>
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1004849202507038804/1061448840676384900/IMG_4146.gif'); background-size: cover;">
+<body style="background-image: url('https://cdn.discordapp.com/attachments/1004849202507038804/1061453736918138961/586E791A-68BE-4FCE-895F-A3D4D86C31B4.gif'); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
@@ -332,9 +332,8 @@
 </h4>
 </div>
 </div></center><br><br>
-<div style="text-align: center;">
-<iframe style="margin-top: -36px;max-width: 544px" src="https://open.spotify.com/embed/track/6T5i0o62ZyfHRRHHihYJ1n?utm_source=generator&theme=0" width="80%" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-</div>
+<a href="https://discord.com/users/816500072547876864" target="_blank">
+<img src="https://discord.c99.nl/widget/theme-4/816500072547876864.png" style="width: 300px;"></a>
 <div class="footer" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;">
 <h4><a href="" style="text-align: center; text-shadow: 0px 5px 5px ;font-family: 'Common Pixel', sans-serif; color: #ffffff;"></a>
 </h4>
