--- a/index.html
+++ b/index.html
@@ -273,13 +273,13 @@
  <body onload="document.body.style.opacity='1'">
  <div class="center">
  <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
- <img src="https://cdn.discordapp.com/attachments/1004849202507038804/1061453777388974100/966354724381159524.gif" alt="HTML" width="150" height="250">
+ <img src="https://cdn.discordapp.com/attachments/1051942010963099788/1061484494370123866/1029386054840635392.gif" alt="HTML" width="350" height="450">
  <pre><h1>
 Private Biolink Service.</h1>
  </pre>
  </div>
  <pre>   </pre>
- <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Get Your Own </span> </a>
+ <pre>   <a href="https://discord.gg/fp3j3ayz7F"><span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">Claim</span> </a>
  </pre>
  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
  <style>
