--- a/index.html
+++ b/index.html
@@ -273,9 +273,41 @@
  <body onload="document.body.style.opacity='1'">
  <div class="center">
  <pre style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);">
- <img src="https://cdn.discordapp.com/attachments/1051942010963099788/1061484494370123866/1029386054840635392.gif" alt="HTML" width="350" height="450">
- <pre><h1>
-Private Biolink Service.</h1>
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣟⠙⢿⣦⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡶⠛⠛⢷⡄⢀⣼⢿⡷⣄⠙⢿⣦⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⠸⡄⠀⣀⡘⣿⣟⠁⠀⠙⣿⣷⣤⣿⣷⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡾⠋⠉⠉⢳⣷⣠⠽⠟⡼⠻⣦⣤⣼⣿⣿⠟⠛⠋⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣨⣧⠀⠀⣾⢉⣛⡷⠶⠾⠷⠶⢾⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⠋⠀⢸⢷⣄⢻⣄⠀⠀⠀⠀⠀⠀⠀⠙⢿⣻⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠸⣆⡰⠋⠀⠙⠷⣼⣷⢦⡤⢤⣴⡶⠆⠀⠀⠉⢻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⡶⠛⠳⣤⡀⣀⣀⣸⠗⠚⣷⣞⣉⣿⠒⠒⠀⠀⠈⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⡀⠀⠀⠸⣆⡀⠀⠀⠙⢾⡽⠞⣷⠞⢁⡾⠋⠙⠃⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢼⣿⣿⣶⣄⣀⣽⣿⣗⠶⠭⠵⣷⣞⠉⣹⣿⠃⠀⠀⠀⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⣿⣿⣿⣿⣁⠈⠻⣷⣤⡞⢉⡿⠛⡿⣿⡄⠀⠀⠀⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣇⠈⠻⣿⣿⣷⣤⣼⣿⣿⠋⠀⠀⠧⠘⠟⠀⠀⠀⠀⠀⠀⢰⣟⠀⠀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⡟⢷⣄⠈⠻⣿⣿⣿⣟⠈⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠛⠹⣦⡀⠀⠀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⠟⣿⣿⣿⣧⠀⠙⠷⣄⠈⣻⣿⣿⣷⣜⢷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⢢⡀⠀⠀⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⠟⣡⣾⣿⣿⣿⡿⠀⠀⠀⢈⣴⠟⠀⠹⠿⠟⠀⠉⠻⢶⡶⠶⠀⠀⠀⠀⠀⢀⣴⠟⠃⠈⢷⣦⣤⠀⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⡾⣫⠼⢻⣿⣿⣿⣿⡇⠀⠀⣴⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠹⣦⡀⠀⢀⣠⠴⠛⠁⠀⠀⠀⠀⣸⡿⣤⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⠟⠁⠁⠀⢸⣿⣿⣿⡿⠁⢀⣾⠛⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡼⣿⠾⠋⠁⠀⠀⠀⠀⠀⢀⡼⢿⣝⠦⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣴⡟⠁⠀⠀⠀⠀⢸⣿⣿⣿⣇⣰⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣼⢯⡿⠁⠀⣀⠀⠀⠀⠀⠀⣠⢿⡙⢦⡙⠛⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣾⣿⣷⠂⠀⠀⠀⠀⠘⣿⣿⣿⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⣯⢷⡀⢸⣿⡇⠀⠀⣠⣾⡙⢦⡙⢦⡙⠶⠀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣾⣿⣿⣿⡟⠀⠀⠀⠀⠀⠀⣿⣿⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢳⡹⡆⠉⠀⣠⡾⠻⣦⡙⢦⡙⣮⡻⣦⡀⠀
+  ⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿⣿⣿⣿⡇⠀⠀⠀⠀⠀⣠⣿⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢠⣔⡏⢻⣤⠾⣯⡙⢦⡈⠻⣌⡻⣦⡻⣦⡀⠀
+  ⠀⠀⠀⠀⠀⠀⢀⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⠀⢀⣴⡟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣏⣸⠴⣯⣙⠳⣬⠻⣦⡙⢦⣈⠳⣌⠳⣬⠁⠀
+  ⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⣿⣿⣿⣿⡇⠀⠀⣠⣾⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣷⣬⡙⢷⣌⠳⣬⡻⣦⠙⢧⡙⢷⣍⠃⠀
+  ⠀⠀⠀⠀⢀⣼⣿⣿⣿⣿⣿⣿⣿⣿⠃⢀⣼⠟⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠙⢿⣦⣙⠷⣮⡻⣦⡻⣆⡙⢦⡙⠷⠀
+  ⠀⠀⠀⢀⣾⣿⣿⣿⣿⣿⣿⣿⣿⣧⣴⡿⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠉⠿⣷⣜⠳⣦⡹⢦⡳⢦⡻⣶⠀
+  ⠀⠀⢠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⠟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣷⣌⠷⣬⡻⢦⡳⣤⠀
+  ⠀⣰⣿⣿⣿⣿⣿⣿⣿⣿⠟⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠛⣶⣌⠻⣮⡻⣮⡀
+  ⣾⣿⣿⣿⣿⣿⠿⠛⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠻⣦⡌⢻⣮⡇
+  ⠉⠉⠉⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⢻⣦⣽⡏                 
+      </pre>
+      <pre>
+Private Biolink Service.
+      </pre>
+      </div></center>
+      </div>
  </pre>
  </div>
  <pre>   </pre>
