--- a/profiles/killhouse.html
+++ b/profiles/killhouse.html
@@ -411,7 +411,7 @@ width: 300px;"></a>
 <script type="text/javascript">
         ;(function(){
         // (QUOTED STRING)
-        var msg = "J A Y";
+        var msg = "K . .";
 
         var size = 12;
         // Set both to 1 for plain circle, set one of them to 2 for oval
