--- a/profiles/xo.html
+++ b/profiles/xo.html
@@ -334,7 +334,8 @@
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1061513935393660958/1061530210702471238/0798413834d3ee79872f8086e506c691.png');">X O</h1>
+    <center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1061513935393660958/1061530210702471238/0798413834d3ee79872f8086e506c691.png">
+        <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">X O</h1>
 </div>
 <div class="badge">
 <img src="https://cdn.discordapp.com/emojis/1059336553199042622.gif?size=80&quality=lossless" style="width: 20px; height: 20px;" alt="Eternal">
