--- a/profiles/c+.html
+++ b/profiles/c+.html
@@ -330,7 +330,7 @@
     }
     }
  </style>   
-<body style="background-image: url('https://cdn.discordapp.com/attachments/1061412000078495764/1061709352387493988/image.png'); background-size: cover;">
+<body style="background-image: url(''); background-size: cover;">
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
