--- a/profiles/lvl.html
+++ b/profiles/lvl.html
@@ -6,7 +6,7 @@
 <link href="assets/media/logo.png" rel="icon" type="image/x-icon" />
 <link href="ajax/libs/font-awesome/6.1.0/css/all.min.css" rel="stylesheet" />
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<meta content="killa.lol [@c+]" property="og:title" />
+<meta content="killa.lol [@lvl]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
 <meta content="https://cdn.discordapp.com/attachments/1004849202507038804/1061453777388974100/966354724381159524.gif" property="og:image" />
