--- a/profiles/lvl.html
+++ b/profiles/lvl.html
@@ -637,6 +637,7 @@ width: 300px;"></a>
 	function type() {
 		let strs = [
 			  "Graphic Designer Amateur",
+              "discord.gg/trapsoul",
 	];
    
 	var num = getRandomInt(strs.length);
