--- a/profiles/lvl.html
+++ b/profiles/lvl.html
@@ -352,7 +352,9 @@
 </div>
 </center>
 <p class="quote">
-<span style="font-weight: bold;text-shadow: 0 0 5px hwb(0 100% 0%);"><a href="Jay..">st: lvl x Good_day x zion.</span></a>
+<pre>
+Graphic Designer Amateur | Commisions / open | lvl x Good_day x zion.
+</pre>
 </p></center>
 </div>
 <center><div class="wrapper">
