--- a/profiles/lvl.html
+++ b/profiles/lvl.html
@@ -9,7 +9,7 @@
 <meta content="killa.lol [@lvl]" property="og:title" />
 <meta content="website" property="og:type" />
 <meta content="killa.lol/profiles/c" property="og:url" />
-<meta content="https://cdn.discordapp.com/attachments/1004849202507038804/1061453777388974100/966354724381159524.gif" property="og:image" />
+<meta content="https://cdn.discordapp.com/avatars/759147973245796382/c4ef5269546028f1fff26f6cf5d5e116.png?size=4096" property="og:image" />
 <meta content="・lvl#9999" property="og:description" />
 <link rel="canonical" href="killa.lol" />
 <meta content="#2f3136" name="theme-color">
@@ -334,7 +334,7 @@
 <script src="js/spooky.js"></script>
 <div class="title">
 <div class="title-img">
-<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/attachments/1061668055110918164/1061741508639854722/image.png">
+<center><img alt="Avatar" class="avatar" style="position: center;" src="https://cdn.discordapp.com/avatars/759147973245796382/c4ef5269546028f1fff26f6cf5d5e116.png?size=4096">
 <center><h1 class="owner" style="display: inline-block; text-shadow: 0px 1px 1px ;font-family: 'PF Tempesta Five', sans-serif; color: #fff; text-align: center; background-image: url('https://cdn.discordapp.com/attachments/987149728800198686/991834200309248070/sparkle.gif');">LVL</h1>
 </div>
 <div class="badge">
